feat&fix: Improve video functionality and modify API documentation
