# api/relation.go
@@ -30,6 +30,7 @@ func NewRelationApi() RelationApi {
 // RelationAction 关注/取消关注
 // @Summary 关注/取消关注
 // @Description 关注/取消关注
+// @Param token header string true "token"
 // @Param action_type formData int true "1:关注 2:取消关注"
 // @Param focus_id formData int true "关注用户ID"
 // @Success 200 {string} Response
@@ -55,10 +56,11 @@ func (r RelationApi) RelationAction(ctx *gin.Context) {
 // GetFocusList 关注列表
 // @Summary 关注列表
 // @Description 关注列表
+// @Param token header string true "token"
 // @Param user_id query int true "用户ID"
 // @Success 200 {string} Response
 // @Failure 400 {string} Response
-// @Router /api/v1/default/relation/focus/list [get]
+// @Router /api/v1/relation/focus/list [get]
 func (r RelationApi) GetFocusList(ctx *gin.Context) {
 	var focusListDto dto.FocusListDto
 	if err := r.BuildRequest(BuildRequestOption{Ctx: ctx, DTO: &focusListDto}).GetError(); err != nil {
@@ -94,10 +96,11 @@ func (r RelationApi) GetFocusList(ctx *gin.Context) {
 // GetFansList 粉丝列表
 // @Summary 粉丝列表
 // @Description 粉丝列表
+// @Param token header string true "token"
 // @Param user_id query int true "用户ID"
 // @Success 200 {string} Response
 // @Failure 400 {string} Response
-// @Router /api/v1/default/relation/fans/list [get]
+// @Router /api/v1/relation/fans/list [get]
 func (r RelationApi) GetFansList(ctx *gin.Context) {
 	var fansListDto dto.FansListDto
 	if err := r.BuildRequest(BuildRequestOption{Ctx: ctx, DTO: &fansListDto}).GetError(); err != nil {
