# docs/swagger.json
@@ -13,6 +13,13 @@
                 "summary": "添加评论",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "视频id",
                         "name": "video_id",
@@ -48,6 +55,13 @@
                 "summary": "删除评论",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "评论id",
                         "name": "comment_id",
@@ -71,43 +85,14 @@
                 }
             }
         },
-        "/api/v1/default/relation/fans/list": {
+        "/api/v1/default/video/list": {
             "get": {
-                "description": "粉丝列表",
-                "summary": "粉丝列表",
+                "description": "获取用户发布视频列表",
+                "summary": "获取用户发布视频列表",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "用户ID",
-                        "name": "user_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/default/relation/focus/list": {
-            "get": {
-                "description": "关注列表",
-                "summary": "关注列表",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "用户ID",
+                        "description": "用户id",
                         "name": "user_id",
                         "in": "query",
                         "required": true
@@ -214,6 +199,13 @@
                 "summary": "获取消息列表",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "目标用户id",
                         "name": "to_user_id",
@@ -242,6 +234,13 @@
                 "description": "发送消息",
                 "summary": "发送消息",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "目标用户id",
@@ -444,6 +443,13 @@
                 "summary": "关注/取消关注",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "1:关注 2:取消关注",
                         "name": "action_type",
@@ -455,6 +461,78 @@
                         "description": "关注用户ID",
                         "name": "focus_id",
                         "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/relation/fans/list": {
+            "get": {
+                "description": "粉丝列表",
+                "summary": "粉丝列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/relation/focus/list": {
+            "get": {
+                "description": "关注列表",
+                "summary": "关注列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "user_id",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -659,10 +737,10 @@
                 "summary": "删除视频",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "用户id",
-                        "name": "id",
-                        "in": "formData",
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
                         "required": true
                     },
                     {
@@ -689,51 +767,29 @@
                 }
             }
         },
-        "/api/v1/video/list": {
-            "get": {
-                "description": "获取用户发布视频列表",
-                "summary": "获取用户发布视频列表",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "用户id",
-                        "name": "user_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/video/publish": {
             "post": {
                 "description": "发布视频",
                 "summary": "发布视频",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "用户id",
-                        "name": "id",
-                        "in": "formData",
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "视频标题",
                         "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "封面图片",
+                        "name": "cover_image_data",
                         "in": "formData",
                         "required": true
                     },
